# ashtune

app/src/foss/kotlin/com/metrolist/music/discord/: DiscordRpcManager.kt  DiscordSdkHelper.kt
app/src/gms/kotlin/com/metrolist/music/discord/: DiscordSdkHelper.kt
app/src/izzy/kotlin/com/metrolist/music/discord/: DiscordRpcManager.kt  DiscordSdkHelper.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  discord_stub.cpp
app/src/main/kotlin/com/metrolist/music/: MainActivity.kt
app/src/main/kotlin/com/metrolist/music/ui/component/: Items.kt
app/src/main/res/values/: app_name.xml
app/src/main/res/values-ar/: metrolist_strings.xml
app/src/main/res/values-bg/: metrolist_strings.xml
app/src/main/res/values-cs/: metrolist_strings.xml
app/src/main/res/values-de/: metrolist_strings.xml
app/src/main/res/values-es/: metrolist_strings.xml
app/src/main/res/values-fr/: metrolist_strings.xml
app/src/main/res/values-gl/: metrolist_strings.xml
app/src/main/res/values-in/: metrolist_strings.xml
app/src/main/res/values-it/: metrolist_strings.xml
app/src/main/res/values-iw/: metrolist_strings.xml
app/src/main/res/values-ro/: metrolist_strings.xml
app/src/main/res/values-ru/: metrolist_strings.xml
app/src/main/res/values-th/: metrolist_strings.xml
app/src/main/res/values-tr/: metrolist_strings.xml
app/src/main/res/values-uk/: metrolist_strings.xml
app/src/main/res/values-vi/: metrolist_strings.xml
app/src/main/res/values-zh-rCN/: metrolist_strings.xml
innertube/src/main/kotlin/com/metrolist/innertube/pages/: RelatedPage.kt
(+1 files in other folders)
